--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="School.html">School</a>
+            <a class="nav-link" href="school.html">School</a>
           </li>
           <li class="nav-item"> 
             <a class="nav-link" href="#">Resume</a>
