--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="school.html">School</a>
           </li>
           <li class="nav-item"> 
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="Resume.html">Resume</a>
           </li>
           <li class="nav-item"> 
             <a class="nav-link" href="contact.html">Contact</a>
