--- a/thankyou.html
+++ b/thankyou.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="School.html">School</a>
           </li>
           <li class="nav-item"> 
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="Resume.html">Resume</a>
           </li>
           <li class="nav-item"> 
             <a class="nav-link" href="contact.html">Contact</a>
