--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Stardos+Stencil:wght@700&display=swap" rel="stylesheet">
   <title>Alejandro Reyes | About</title>
-  <link href="main.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
 </head>
 <body>
 <header>
