--- a/Resume.html
+++ b/Resume.html
@@ -132,19 +132,19 @@
           <hr>
           <div class="timeline">
             <div class="timeline-item">
-              <h5 class="h6 mb-2">Front End Developer / w3schools.com</h5>
-              <p class="text-muted">Jan 2015 - Current</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+              <h2 class="h6 mb-2">Volunteer assistant / Rabbit Rescue Inc.</h2>
+              <p class="text-muted">Feb 2017- Nov 2018</p>
+              <p>I ensured the safety of rabbits on the premises while also taking responsibility for their nutrition and basic health care.</p>
             </div>
             <div class="timeline-item">
-              <h5 class="h6 mb-2">Web Developer / something.com</h5>
-              <p class="text-muted">Mar 2012 - Dec 2014</p>
-              <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+              <h2 class="h6 mb-2">Retail Sales Associate / something.com</h2>
+              <p class="text-muted">Jan 2019 - May 2019</p>
+              <p>Worked at a local clothing store, assisting customers with their purchases, organizing merchandise, and maintaining store cleanliness.</p>
             </div>
             <div class="timeline-item">
-              <h5 class="h6 mb-2">Graphic Designer / designsomething.com</h5>
-              <p class="text-muted">Jun 2010 - Mar 2012</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h2 class="h6 mb-2">Virtual Assistant / something.com</h2>
+              <p class="text-muted">Jun 2019 - Dec 2020</p>
+              <p>Worked remotely, providing administrative and organizational support to professionals or entrepreneurs, managing emails, scheduling appointments, and conducting research.</p>
             </div>
           </div>
         </div>
