--- a/thankyou.html
+++ b/thankyou.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="School.html">School</a>
+            <a class="nav-link" href="school.html">School</a>
           </li>
           <li class="nav-item"> 
             <a class="nav-link" href="Resume.html">Resume</a>
