--- a/school.html
+++ b/school.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Stardos+Stencil:wght@700&display=swap" rel="stylesheet">
-  <title>Alejandro Reyes | Home</title>
+  <title>Alejandro Reyes | School</title>
   <link href="index.css" rel="stylesheet">
 </head>
 <body>
